...
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <https://www.gnu.org/licenses/gpl-3.0.txt>.
  -->

<android.support.v7.widget.CardView
    android:id="@+id/card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
...
            app:riv_border_color="@android:color/black"
            app:riv_border_width="0dp"
            app:riv_corner_radius="50dp"
            app:riv_oval="false"/>

        <TextView
            android:id="@+id/apiary_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_toEndOf="@id/apiary_image"
            android:layout_toStartOf="@+id/more_icon"
            android:ellipsize="end"
            android:maxLines="2"
            android:minHeight="52sp"
            android:text="@string/default_apiary_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorPrimaryText"/>
...
            android:layout_height="20dp"
            android:layout_below="@id/apiary_name"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/apiary_image"
            android:adjustViewBounds="false"
            android:contentDescription="@string/num_hives"
            android:src="@drawable/ic_hive"
            android:tint="@color/colorSecondaryText"/>

        <TextView
            android:id="@+id/num_hives"
            android:layout_width="wrap_content"
...
