...
    <string name="gobees_logo">GoBees logo</string>
    <!-- GoBees URL [CHAR LIMIT=NONE] -->
    <string name="gobees_url" translatable="false">http://gobees.io/</string>
    <!-- Refresh menu option [CHAR LIMIT=25] -->
    <string name="refresh">Refresh</string>
    <!-- Edit action [CHAR LIMIT=30] -->
    <string name="edit">Edit</string>
    <!-- Delete action [CHAR LIMIT=30] -->
    <string name="delete">Delete</string>
    <!-- Title when user doesn't grant permission [CHAR LIMIT=100] -->
    <string name="permission_request_title">Permission denied</string>
    <!-- Allow button, when user doesn't grant location permission [CHAR LIMIT=30] -->
    <string name="permission_request_allow_button">ALLOW</string>
...

    <!--+++++++++++++++-->
    <!-- General Icons -->
    <!--+++++++++++++++-->

    <!-- Description of icon ic_more_vert [CHAR LIMIT=100] -->
    <string name="more_icon">More…</string>
    <!-- Description of enter icon ic_enter [CHAR LIMIT=100] -->
    <string name="enter_icon">Enter…</string>
    <!-- Description of date icon ic_date [CHAR LIMIT=25] -->
    <string name="date_icon">Date</string>
    <!-- Description of weather icon [CHAR LIMIT=25] -->
    <string name="weather_icon">Weather icon</string>
...
