<?xml version="1.0" encoding="utf-8"?>

<com.davidmiguel.gobees.utils.ScrollChildSwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/hivesContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical"
        android:background="@color/colorBackground">

        <LinearLayout
            android:id="@+id/hivesLL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/hives_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_hives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/no_hives_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:adjustViewBounds="false"
                android:contentDescription="@string/add_icon"
                android:src="@drawable/ic_add_circle_outline"/>

            <TextView
                android:id="@+id/no_hives_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/list_item_padding"
                android:text="@string/no_apiaries"/>

            <TextView
                android:id="@+id/no_hives_add"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/touch_feedback"
                android:gravity="center"
                android:text="@string/no_apiaries_add"/>

        </LinearLayout>
    </RelativeLayout>
</com.davidmiguel.gobees.utils.ScrollChildSwipeRefreshLayout>

