...
                android:adjustViewBounds="false"
                android:contentDescription="@string/name_icon"
                android:src="@drawable/ic_name"
                android:tint="@color/colorSecondaryText"/>

            <EditText
                android:id="@+id/add_hive_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hive_name_hint"
                android:inputType="textCapWords"
                android:maxLines="1"
...
                android:adjustViewBounds="false"
                android:contentDescription="@string/notes_icon"
                android:src="@drawable/ic_notes"
                android:tint="@color/colorSecondaryText"/>

            <EditText
                android:id="@+id/add_hive_notes"
                android:layout_width="0dp"
                android:layout_height="350dp"
                android:layout_weight="1"
                android:gravity="top|left"
                android:hint="@string/hive_notes_hint"
                android:inputType="textMultiLine|textCapSentences"/>
...
